updated some exceptions and config.properties