@@ -1,10 +1,12 @@
 package com.andersenhotels.model.storage.db_storage;
 
 import com.andersenhotels.model.Hotel;
+import com.andersenhotels.model.config.ConfigManager;
 import com.andersenhotels.model.storage.DataStorage;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityManagerFactory;
 import jakarta.persistence.Persistence;
+import jakarta.persistence.PersistenceException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -13,7 +15,7 @@ import java.util.List;
 public class DatabaseStorage implements DataStorage {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(DatabaseStorage.class);
-    private static final String PERSISTENCE_UNIT_NAME = "andersen-hotels";
+    private static final String PERSISTENCE_UNIT_NAME = ConfigManager.getPersistenceUnitName();
     private final EntityManagerFactory emf;
 
     public DatabaseStorage() {
@@ -23,32 +25,30 @@ public class DatabaseStorage implements DataStorage {
 
     @Override
     public void saveState(Hotel hotel) {
-        EntityManager em = emf.createEntityManager();
-        em.getTransaction().begin();
-        try {
-            LOGGER.info("Saving hotel state to the database...");
-            em.merge(hotel);
-            em.getTransaction().commit();
-            LOGGER.info("Hotel state saved successfully.");
-        } catch (Exception e) {
-            em.getTransaction().rollback();
-            LOGGER.error("Failed to save hotel state. Transaction rolled back.", e);
-            throw new RuntimeException("Failed to save state", e);
-        } finally {
-            em.close();
+        try (EntityManager em = emf.createEntityManager()) {
+            em.getTransaction().begin();
+            try {
+                LOGGER.info("Saving hotel state to the database...");
+                em.merge(hotel);
+                em.getTransaction().commit();
+                LOGGER.info("Hotel state saved successfully.");
+            } catch (PersistenceException e) {
+                em.getTransaction().rollback();
+                LOGGER.error("Failed to save hotel state. Transaction rolled back.");
+            }
         }
     }
 
     @Override
     public Hotel loadState() {
-        EntityManager em = emf.createEntityManager();
-        try {
+        try (EntityManager em = emf.createEntityManager()) {
             LOGGER.info("Loading hotel state from the database...");
             List<Hotel> hotels = em.createQuery("SELECT h FROM Hotel h", Hotel.class).getResultList();
             LOGGER.info("Loaded {} hotels from the database.", hotels.size());
-            return hotels.isEmpty() ? new Hotel() : hotels.get(0);
-        } finally {
-            em.close();
+            return hotels.isEmpty() ? new Hotel() : hotels.getFirst();
+        } catch (PersistenceException e) {
+            LOGGER.error("Failed to load hotel state from the database.");
+            return new Hotel();
         }
     }
 
